--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -83,3 +83,8 @@
       &-blocks
         margin-top: 0
 
+@include media-breakpoint-down(sm)
+  .section
+    &__subtitle
+      br
+        display: none
