--- a/assets/sass/_components/_blocks.sass
+++ b/assets/sass/_components/_blocks.sass
@@ -62,6 +62,8 @@
   .section-blocks
     .block
       &__subtitle
+        font-size: 28px
+        line-height: 32px !important
         word-wrap: break-word
         overflow-wrap: break-word
         -webkit-hyphens: auto
