--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -263,8 +263,12 @@
       margin-left: 0px
 
   .card-post
+    margin-bottom: 50px
     &__title
       h3
         font-size: 20px
     &__btn
       font-size: 18px
+    p
+      font-size: 14px
+      line-height: 26px
