--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -147,3 +147,18 @@
     .next-post
       a
         font-size: 16px
+
+@include media-breakpoint-down(sm)
+  .section-navigation
+    .previous-post,
+    .next-post
+      a
+        font-size: 19px
+        word-wrap: break-word
+        overflow-wrap: break-word
+        -webkit-hyphens: auto
+        -moz-hyphens: auto
+        hyphens: auto
+        white-space: normal
+    .previous-post
+      margin-bottom: 30px
