--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -117,6 +117,9 @@
       font-weight: 300
       letter-spacing: 0.9556px
       color: $dark-color
+      &.list-intro
+        margin-bottom: 0
+        padding-bottom: 0
     &__mailImg
       position: absolute
       margin-left: 30px
