--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -146,7 +146,13 @@
     .previous-post,
     .next-post
       a
-        font-size: 20px
+        font-size: 22px
+        word-wrap: break-word
+        overflow-wrap: break-word
+        -webkit-hyphens: auto
+        -moz-hyphens: auto
+        hyphens: auto
+        white-space: normal
 
 @include media-breakpoint-down(sm)
   .section-navigation
