--- a/assets/sass/_layout/_footer.sass
+++ b/assets/sass/_layout/_footer.sass
@@ -89,6 +89,7 @@
     .contacts
       display: flex
       flex-direction: column
+      margin-bottom: 50px
       a
         display: inline-block
         font-family: $main-font
