added gsap and luxy

--- a/assets/sass/_components/_forms.sass
+++ b/assets/sass/_components/_forms.sass
@@ -63,3 +63,8 @@
     form > .row > .col-12
       padding-right: calc(var(--bs-gutter-x) * 0.5)
       padding-left: calc(var(--bs-gutter-x) * 0.5)
+  .section-st-project.section-form
+    .wpcf7
+      .wpcf7-form
+        label
+          visibility: visible
