--- a/assets/sass/_base-styles.sass
+++ b/assets/sass/_base-styles.sass
@@ -28,6 +28,10 @@ body
 .grecaptcha-badge
   visibility: hidden
 
+.scroll-wrapper
+  width: 100%
+  max-width: 100%
+
 @include media-breakpoint-up(lg)
   .container-short
     max-width: 1100px
