--- a/assets/sass/_layout/_modules/_testimonials.sass
+++ b/assets/sass/_layout/_modules/_testimonials.sass
@@ -22,7 +22,7 @@
         &:hover
           cursor: pointer
           svg
-            fill: $accent-color
+            fill: $main-color
       .swiper-arrow-prev
         margin-right: 30px
 
