--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -67,23 +67,16 @@
       fill: $main-color
 
 .card-project
-  margin-bottom: 40px
-  > a
-    position: relative
+  margin-bottom: 60px
+  a
+    text-decoration: none
+    transition: all 0.3s ease-in-out
   &:hover
     figure
-      &::after
-        visibility: hidden
-        background-image: linear-gradient(0,rgba(18,35,43,.85),rgba(18,35,43,.70))
-        filter: contrast(1.5)
-        content: ""
-        height: 100%
-        left: 0
-        position: absolute
-        top: 0
-        width: 100%
       img
         transform: scale(1.1)
+    .card-project__title
+      color: $accent-color
   figure
     margin-bottom: 20px
     overflow: hidden
@@ -93,30 +86,15 @@
       height: auto
       object-fit: cover
       transform: scale(1)
-      transition: all .3s ease-in
-  &__hover-title
-    visibility: hidden
-    opacity: 0
-    display: block
-    transition: all .3s ease-in
-    position: absolute !important
-    top: 45%
-    left: 50%
-    transform: translate(-50%, -50%)
-    text-decoration: none
-    color: $main-color
+      transition: all 0.3s ease-in-out
   &__title
     text-decoration: none
-    h3
-      font-family: $second-font
-      font-size: 23.04px
-      font-weight: 300
-      letter-spacing: 0.46079999999999993px
-      transition: all .3s ease-in
-      color: $text-color
-    &:hover
-      h3
-        color: $accent-color
+    font-family: $second-font
+    font-size: 23.04px
+    font-weight: 300
+    letter-spacing: 0.46079999999999993px
+    transition: all .3s ease-in
+    color: $text-color
   &__content
     margin-left: 40px
     .related-services
@@ -133,12 +111,6 @@
         margin-right: 5px
         color: #496063
 
-.card-project:hover
-  .card-project__hover-title
-    visibility: hidden
-    opacity: 1
-    color: $main-color
-
 .card-post
   margin-bottom: 40px
   figure
@@ -150,7 +122,7 @@
       height: auto
       object-fit: cover
       transform: scale(1)
-      transition: all .3s ease-in
+      transition: all 0.3s ease-in-out
     &:hover
       img
         transform: scale(1.1)
@@ -194,26 +166,22 @@
     -webkit-box-orient: vertical
     white-space: normal
   &__btn
-    display: flex
-    align-items: center
+    display: inline-block
     font-family: $second-font
     font-weight: 300
     font-size: 19px
     letter-spacing: 0.36px
     line-height: 25px
     text-decoration: none
+    border-bottom: 2px solid transparent
     transition: all .3s ease-in
     margin-top: 15px
+    padding-bottom: 5px
     color: $main-color
-    svg
-      margin-top: 10px
-      margin-left: 10px
-      transition: all .3s ease-in
-      fill: $main-color
     &:hover
-      color: $accent-color
-      svg
-        fill: $accent-color
+      color: $main-color
+      border-bottom: 2px solid $main-color
+
 
 .card-related
   &-post
@@ -256,6 +224,7 @@
       &:hover
         .card-related-post__title
           color: $main-color
+
 
 @include media-breakpoint-down(lg)
   .card-project
