--- a/assets/sass/_components/_breadcrumbs.sass
+++ b/assets/sass/_components/_breadcrumbs.sass
@@ -7,10 +7,12 @@
       span
         span > a
           text-decoration: none
+          border-bottom: 2px solid transparent
           transition: all .4s ease-in
           color: $text-color
           &:hover
-            color: $accent-color
+            color: $text-color
+            border-bottom: 2px solid $text-color
         .breadcrumb_last
           color: $main-color
   &--dark
@@ -21,9 +23,11 @@
         span
           span > a
             text-decoration: none
+            border-bottom: 2px solid transparent
             transition: all .4s ease-in
             color: $bg-color
             &:hover
-              color: $accent-color
+              color: $bg-color
+              border-bottom: 2px solid $bg-color
           .breadcrumb_last
             color: $main-color
