--- a/assets/sass/_components/_newsletter.sass
+++ b/assets/sass/_components/_newsletter.sass
@@ -32,6 +32,11 @@
       color: #fff
       background-color: $dark-color
       margin-bottom: 20px
+      transition: all .3s ease-in
+      &:hover
+        background-color: $accent-color
+        color: $dark-color
+        border-color: $accent-color
 
 @include media-breakpoint-down(lg)
   .mc4wp-form
