--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -52,6 +52,12 @@
           color: $main-color
           &:hover
             color: $accent-color
+      ul
+        color: $text-color
+        li
+          font-size: 16px
+          line-height: 30px
+          color: $text-color
     .post-sidebar
       z-index: 8
       .menu,
@@ -72,9 +78,11 @@
             letter-spacing: 0.2px
             text-decoration: none
             transition: all .3s ease-in
+            border-bottom: 2px solid transparent
             color: $dark-color
             &:hover
-              color: $accent-color
+              color: $dark-color
+              border-bottom: 2px solid $dark-color
       &__title
         font-family: $main-font
         font-weight: 400
@@ -104,15 +112,21 @@
       white-space: nowrap
       overflow: hidden
       text-overflow: ellipsis
+      
+      span
+        border-bottom: 2px solid transparent
+        transition: all .3s ease-in
       svg
         display: block
         transition: all .3s ease-in
         margin-top: 5px
         fill: $main-color
       &:hover
-        color: $accent-color
+        color: $text-color
+        span
+         border-bottom: 2px solid $text-color
         svg
-          fill: $accent-color
+          fill: $main-color
   .next-post
     a
       justify-content: flex-end
