--- a/assets/sass/_layout/_posts/_single-projects.sass
+++ b/assets/sass/_layout/_posts/_single-projects.sass
@@ -80,10 +80,12 @@
             letter-spacing: 0.42px
             text-decoration: none
             margin-bottom: 20px
+            border-bottom: 2px solid transparent
             transition: all .3s ease-in
             color: $text-color
             &:hover
-              color: $accent-color
+              border-bottom: 2px solid $text-color
+              color: $text-color
 
     .line
       display: inline-block
