--- a/assets/sass/_layout/_pages/_page-starting-project.sass
+++ b/assets/sass/_layout/_pages/_page-starting-project.sass
@@ -131,6 +131,11 @@
       border-radius: 20px
       color: $main-color
       background-color: $dark-color
+      transition: all .3s ease-in
+      &:hover
+        border: 1px solid $accent-color
+        color: $dark-color
+        background-color: $accent-color
     &_back
       padding: 10px 60px
       font-family: $main-font
@@ -140,6 +145,11 @@
       border: 1px solid $dark-color
       border-radius: 20px
       background-color: $main-color
+      transition: all .3s ease-in
+      &:hover
+        border: 1px solid $dark-color
+        color: $main-color
+        background-color: $dark-color
     &-btns
       display: flex
       justify-content: center
