--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -57,9 +57,14 @@
     //animation:  b 0.7s infinite steps(1), t calc(var(--n) * 0.3s) steps(var(--n)) forwards
     span
       display: inline-block
+      &:first-child
+        color: #f8f8f8
+        display: inline-block
+        margin-left: 50%
+        transform: translateX(60%)
     .text
       //opacity: 0
-      visibility: hidden
+      //visibility: hidden
     .cursor
       font-weight: 400
       display: inline-block
