--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -58,13 +58,13 @@
     span
       display: inline-block
       &:first-child
-        color: #f8f8f8
-        display: inline-block
-        margin-left: 50%
-        transform: translateX(60%)
+        //color: #f8f8f8
+        //display: inline-block
+        //margin-left: 50%
+        //transform: translateX(60%)
     .text
       //opacity: 0
-      //visibility: hidden
+      visibility: hidden
     .cursor
       font-weight: 400
       display: inline-block
