--- a/assets/sass/_base-styles.sass
+++ b/assets/sass/_base-styles.sass
@@ -32,6 +32,9 @@ body
   width: 100%
   max-width: 100%
 
+#main-content
+  position: relative
+
 @include media-breakpoint-up(lg)
   .container-short
     max-width: 1100px
@@ -43,3 +46,19 @@ body
  img
   max-width: 100%
   height: auto
+
+
+html.lenis
+  height: auto
+
+.lenis.lenis-smooth
+  scroll-behavior: auto
+
+.lenis.lenis-smooth [data-lenis-prevent]
+  overscroll-behavior: contain
+
+.lenis.lenis-stopped
+  overflow: hidden
+
+.lenis.lenis-scrolling iframe
+  pointer-events: none
