--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -24,6 +24,8 @@
           max-width: 40px
           height: auto
           fill: $dark-color
+    .navbar-actions
+      overflow: hidden
     &__light, &__dark
       .site-branding
           .site-logo
