--- a/assets/sass/_layout/_pages/_page-starting-project.sass
+++ b/assets/sass/_layout/_pages/_page-starting-project.sass
@@ -133,6 +133,7 @@
       background-color: $dark-color
       transition: all .3s ease-in
       &:hover
+        opacity: 1
         border: 1px solid $accent-color
         color: $dark-color
         background-color: $accent-color
@@ -147,6 +148,7 @@
       background-color: $main-color
       transition: all .3s ease-in
       &:hover
+        opacity: 1
         border: 1px solid $dark-color
         color: $main-color
         background-color: $dark-color
