--- a/assets/sass/_layout/_posts/_single-projects.sass
+++ b/assets/sass/_layout/_posts/_single-projects.sass
@@ -25,6 +25,7 @@
   .section-featured-image
     padding-top: 0px
     padding-bottom: 0px
+    max-height: 720px
     img
       width: 100%
       max-width: 100%
