--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -119,7 +119,11 @@
           border-radius: 30px
           padding: 1.1rem 3rem 0.9rem !important
           margin-left: 3rem
-          box-shadow: 0 1rem 3rem rgb(0 0 0 / 18%) !important
+          box-shadow: 0 5px 2rem rgb(0 0 0 / 18%) !important
+          transition: all .3s ease-in
+          &:hover
+            background-color: $dark-color
+            box-shadow: 0 2px 2px rgb(0 0 0 / 18%) !important
   
   .wpml-ls-legacy-list-horizontal
     display: none
