--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -1,4 +1,5 @@
 .card-service
+  visibility: hidden
   margin-bottom: 30px
   &__content
     padding: 50px 40px 40px
@@ -67,6 +68,7 @@
       fill: $main-color
 
 .card-project
+  visibility: hidden
   margin-bottom: 60px
   a
     text-decoration: none
