--- a/assets/sass/_layout/_modules/_call-to-action.sass
+++ b/assets/sass/_layout/_modules/_call-to-action.sass
@@ -12,7 +12,7 @@
   a
     display: inline-block
     padding: 15px 30px
-    box-shadow: 0 1rem 3rem rgb(0 0 0 / 18%)
+    box-shadow: 0 5px 2rem rgb(0 0 0 / 18%)
     font-family: $main-font
     font-size: 14px
     letter-spacing: 0.42px
@@ -22,6 +22,10 @@
     border-radius: 30px
     color: $bg-color
     background-color: $accent-color
+    transition: all .3s ease-in
+    &:hover
+      background-color: $dark-color
+      box-shadow: 0 2px 2px rgb(0 0 0 / 18%) !important
 
 @include media-breakpoint-down(lg)
   .section-call-to-action
