--- a/assets/sass/_components/_blocks.sass
+++ b/assets/sass/_components/_blocks.sass
@@ -38,12 +38,15 @@
       line-height: 30px
       color: $text-color
     &__image
+      overflow: hidden
       width: 50%
+      background-color: #e0e4e5
       img
         width: 100%
         max-width: 100%
         height: auto
         object-fit: cover
+        visibility: hidden
 
 @include media-breakpoint-down(lg)
   .section-blocks
