--- a/assets/sass/_components/_blocks.sass
+++ b/assets/sass/_components/_blocks.sass
@@ -46,7 +46,7 @@
         max-width: 100%
         height: auto
         object-fit: cover
-        visibility: hidden
+        //visibility: hidden
 
 @include media-breakpoint-down(lg)
   .section-blocks
