--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -116,9 +116,9 @@
       line-height: 60px
       span
         &:nth-child(1)
-          margin-left: 0
-          margin-right: 10%
-          float: right
+          //margin-left: 0
+          //margin-right: 10%
+          //float: right
 
   .section-form
     .bg-logo
