--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -76,6 +76,17 @@
     position: absolute
     bottom: 40px
 
+.page-template-page-home
+    .section-form
+      ::-webkit-input-placeholder
+        visibility: hidden
+      :-moz-placeholder
+        visibility: hidden
+      ::-moz-placeholder
+        visibility: hidden
+      :-ms-input-placeholder
+        visibility: hidden
+
 .section-form
   padding-top: 100px
   padding-bottom: 140px
@@ -92,14 +103,6 @@
     svg
       opacity: .16
       fill: $bg-color
-  ::-webkit-input-placeholder
-    visibility: hidden
-  :-moz-placeholder
-    visibility: hidden
-  ::-moz-placeholder
-    visibility: hidden
-  :-ms-input-placeholder
-    visibility: hidden
 
 .section-blog
   padding-top: 100px
