--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -37,9 +37,12 @@
           color: $text-color
           &:last-of-type
             margin-right: 0
-      .wp-block-embed
-        max-width: 100%
-        width: 100%
+      figure.wp-block-embed
+        .wp-block-embed__wrapper
+          iframe
+            max-width: 100%
+            width: 100%
+
       p
         font-size: 16px
         line-height: 30px
