--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -39,9 +39,15 @@
             margin-right: 0
       figure.wp-block-embed
         .wp-block-embed__wrapper
+          width: 100%
+          position: relative
+          padding-bottom: 56.25%
           iframe
-            max-width: 100%
+            position: absolute
+            top: 0
+            left: 0
             width: 100%
+            height: 100%
 
       p
         font-size: 16px
