--- a/assets/sass/_layout/_pages/_page-starting-project.sass
+++ b/assets/sass/_layout/_pages/_page-starting-project.sass
@@ -190,6 +190,18 @@
     &__description
       margin-top: 20px
 
+.page-template-page-starting-project
+  .section-st-project
+    &--option-link
+      margin-top: 30px
+      display: inline-block
+      font-family: $main-font
+      font-weight: 400
+      font-size: 16px
+      line-height: 20px
+      color: $dark-color
+      text-decoration: none
+
 @include media-breakpoint-up(lg)
   .section-st-kontakt
     .section
