--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -39,6 +39,10 @@
             font-weight: 400
             letter-spacing: 0.36px
             line-height: 25px
+    &--freelancers
+        padding-top: 0
+
+
 
 .about
     &__header
