--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -228,6 +228,29 @@
           color: $main-color
 
 
+
+.team-card
+  figure
+      margin: 0
+      overflow: hidden
+  img
+      width: 100%
+      max-width: 100%
+      height: auto
+      object-fit: cover
+
+  &__name
+      font-family: $second-font
+      font-size: 24px
+      font-weight: 100
+      margin-bottom: 10px
+  &__position
+      font-family: $main-font
+      font-size: 12px
+      font-weight: 400
+      letter-spacing: 0.36px
+      line-height: 25px
+
 @include media-breakpoint-down(lg)
   .card-project
     &__content
