--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -152,6 +152,7 @@
 @import "single-services"
 @import "single-projects"
 @import "single-case-studies"
+@import "single-team-member"
 
 
 @include media-breakpoint-up(lg)
