--- a/assets/sass/_layout/_archives/_archives.sass
+++ b/assets/sass/_layout/_archives/_archives.sass
@@ -1,4 +1,4 @@
 @import "archive-services"
 @import "archive-projects"
 @import "archive-case-studies"
-@import "archive-blog"
+@import "archive-job"
