--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -84,6 +84,18 @@
     .section-intro .section__title #breadcrumbs span .breadcrumb_last
         color: #fff
 
+    .section-partners
+        .partner-item
+            margin-bottom: 120px
+            &:first-child
+                margin-top: 60px
+            .partner-description
+                font-family: $main-font
+                font-weight: 300
+                font-size: 16px
+                line-height: 30px
+                color: $text-color
+
 @include media-breakpoint-up(lg)
     .section-st-kontakt
         .section
