--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -153,6 +153,7 @@
 @import "single-projects"
 @import "single-case-studies"
 @import "single-team-member"
+@import "single-job"
 
 
 @include media-breakpoint-up(lg)
