--- a/assets/sass/_layout/_posts/_single-job.sass
+++ b/assets/sass/_layout/_posts/_single-job.sass
@@ -67,3 +67,15 @@
         letter-spacing: 0.2px
         margin-bottom: 25px
         color: $dark-color
+
+@include media-breakpoint-down(lg)
+  .single-job
+    .section-intro
+      height: auto
+      padding-top: 180px
+      .section__subtitle
+        font-size: 28px
+        line-height: 32px !important
+        margin-bottom: 0
+    .section-job-content
+      padding-top: 20px
