--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,7 +1,9 @@
 /* BOOTSTRAP */
-@import "~bootstrap/scss/bootstrap"
+@import '~bootstrap/scss/bootstrap'
 /* SWIPER */
 @import 'swiper/css/bundle'
+/* FANCYBOX */
+@import '@fancyapps/ui/dist/fancybox/fancybox.css'
 
 @import "variables"
 @import "typography"
