--- a/assets/sass/_layout/_posts/_single-job.sass
+++ b/assets/sass/_layout/_posts/_single-job.sass
@@ -5,7 +5,7 @@
     padding-bottom: 40px
 
   .section-job-content
-    padding-top: 70px
+    //padding-top: 70px
     margin-bottom: 100px
     .job-title
       font-family: $second-font
