--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -72,7 +72,7 @@
       fill: $main-color
 
 .card-project
-  visibility: hidden
+  //visibility: hidden
   margin-bottom: 60px
   a
     text-decoration: none
